force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__CodeRange__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CodeRange__c</fullName>
    <label>Range of Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>