force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__DeliveredDate__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__DeliveredDate__c</fullName>
    <label>Delivered Date</label>
    <type>Date</type>
</CustomField>