force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>