force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExpirationDate__c</fullName>
    <label>ExpirationDate</label>
    <type>Date</type>
</CustomField>