force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__isInstantRedemption__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__isInstantRedemption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instant Redemption</label>
    <type>Checkbox</type>
</CustomField>