force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__ItemPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ItemPoints__c</fullName>
    <description>Points involved on the item.</description>
    <label>Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>