force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__NetPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__NetPoints__c</fullName>
    <formula>FieloEE__RewardItem__r.FieloEE__Reward__r.FieloEE__PointsCant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetPoints</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>