force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__OriginalPoints__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__OriginalPoints__c</fullName>
    <label>Original Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>