force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__Redemption__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Redemption__c</fullName>
    <label>Redemption</label>
    <referenceTo>FieloEE__Redemption__c</referenceTo>
    <relationshipLabel>Redemption Items</relationshipLabel>
    <relationshipName>Redemption_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>