force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__RewardItem__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RewardItem__c</fullName>
    <label>Reward Item</label>
    <referenceTo>FieloEE__RewardItem__c</referenceTo>
    <relationshipLabel>Redemption Items</relationshipLabel>
    <relationshipName>Redemption_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>