force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__RewardItemPrice__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RewardItemPrice__c</fullName>
    <description>Price of the item.</description>
    <label>Reward Item Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>