force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__RewardName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RewardName__c</fullName>
    <description>Name of the reward.</description>
    <formula>FieloEE__RewardItem__r.FieloEE__Reward__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reward Name</label>
    <type>Text</type>
</CustomField>