force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__StockMode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__StockMode__c</fullName>
    <formula>TEXT(FieloEE__Reward__r.FieloEE__VoucherCreationMode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Mode</label>
    <type>Text</type>
</CustomField>