force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__UniqueCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__UniqueCode__c</fullName>
    <formula>IF( ISPICKVAL(FieloEE__Reward__r.FieloEE__VoucherCreationMode__c, &#39;Controlled By Item&#39;), FieloEE__Code__c,    IF ( FieloEE__CodeRange__c &lt; 10 ,       FieloEE__Code__c + &#39;0&#39; + TEXT( FieloEE__CodeRange__c ),       FieloEE__Code__c + RIGHT( TEXT( FieloEE__CodeRange__c ), 2 )    ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Code</label>
    <type>Text</type>
</CustomField>