force-app/main/default/objects/FieloEE__RedemptionItem__c/validationRules/FieloEE__QuantityGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__QuantityGreaterThanZero</fullName>
    <active>true</active>
    <description>The quantity must be greater than zero</description>
    <errorConditionFormula>FieloEE__Quantity__c &lt;= 0</errorConditionFormula>
    <errorMessage>The quantity must be greater than 0</errorMessage>
</ValidationRule>